Bug with horizontal-align navbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,6 @@
 /*body{background:red;}*/
+#navbar_right{
+    justify-content: right;
+    text-align: right;
+    float: right;
+}
